canting-4.9: Bring it up to 2.0
*Enable ZRAM_WRITEBACK
*Enable both BFQ & CFQ GROUP_IOSCHED
*Disable IOSCHED_DEADLINE

Change-Id: I848be89c182500a7af4d0d9c4d3041c2bf270a0c
Signed-off-by: khusika <khusikadhamar@gmail.com>

--- a/arch/arm64/configs/canting-beryllium_defconfig
+++ b/arch/arm64/configs/canting-beryllium_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.181 Kernel Configuration
+# Linux/arm64 4.9.183 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -45,7 +45,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Canting-1.9"
+CONFIG_LOCALVERSION="-Canting-2.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -141,7 +141,8 @@ CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_MEMCG is not set
-# CONFIG_BLK_CGROUP is not set
+CONFIG_BLK_CGROUP=y
+# CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
@@ -304,6 +305,7 @@ CONFIG_BLOCK=y
 CONFIG_BLK_DEV_BSG=y
 # CONFIG_BLK_DEV_BSGLIB is not set
 # CONFIG_BLK_DEV_INTEGRITY is not set
+# CONFIG_BLK_DEV_THROTTLING is not set
 # CONFIG_BLK_CMDLINE_PARSER is not set
 
 #
@@ -336,10 +338,11 @@ CONFIG_BLK_MQ_PCI=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_DEADLINE=y
+# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
+CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_BFQ=y
-# CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_BFQ_GROUP_IOSCHED=y
 # CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_BFQ=y
 # CONFIG_DEFAULT_NOOP is not set
@@ -1281,7 +1284,7 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 CONFIG_ZRAM=y
-# CONFIG_ZRAM_WRITEBACK is not set
+CONFIG_ZRAM_WRITEBACK=y
 # CONFIG_ZRAM_MEMORY_TRACKING is not set
 CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
 # CONFIG_BLK_CPQ_CISS_DA is not set
